--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@types/jsonwebtoken": "^9.0.7",
     "class-variance-authority": "^0.7.0",
